K8-project/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: nodejs
        image: backend-app:latest  # Matches the Docker image you built
        imagePullPolicy: Never  # Use local image in Minikube
        ports:
        - containerPort: 3000
