K8-project/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
        image: frontend-app:latest  # Matches the Docker image 
        imagePullPolicy: Never  # Use local image in Minikube
        ports:
        - containerPort: 80
